--- a/admin/css/admin-custom.css
+++ b/admin/css/admin-custom.css
@@ -20,3 +20,10 @@ background-repeat: no-repeat;
 background-position: center;
 
 }
+
+nav#custom_nav ul.pagination {
+  display: inline-block;
+  padding-left: 0;
+  margin: 0;
+  border-radius: 4px;
+}
